# field_experiments

./: .gitignore  Analysis.md  DATA_DOCUMENTATION.md  README.md  correlation_drone_sensors.py  explore_thermal_cameras.py  plot_tif_dispersion_interval.py  pyproject.toml  utils.py
analyses/: markdown_to_pdf.py
analyses/2025-10-18/: analysis.md
analyses/2025-11-07/: Analysis.md
correlations/: correlation_ambient_sensors.py  correlation_drone_sensors.py  correlation_pyr_voltage.py
prompts/: construct_report.md  drone_data_class.md  sensor_and_drone.md  thermal_camera.md
sensor_coordinates/: README.md  sensor_coordinates.json  sensor_coordinates.py
src/: 2025-11-07.ipynb  2025-11-07.py  __init__.py  drone_footage.py  explore_thermal_cameras.py  plot_tif_dispersion_interval.py  utils.py
src/correlations/: correlation_ambient_sensors.py  correlation_drone_sensors.py  correlation_pyr_voltage.py
