[project]
name = "field-experiments"
version = "0.1.0"
description = "Exploration utilities and reporting for Sunscreen field experiment datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.10",
    "matplotlib>=3.8",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pytz>=2025.2",
    "rasterio>=1.4.3",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "xhtml2pdf>=0.2.17",
]
