[project]
name = "field-experiments"
version = "0.1.0"
description = "Exploration utilities and reporting for Sunscreen field experiment datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "markdown>=3.10",
    "matplotlib>=3.8",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pyproj>=3.7.2",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.3",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
